tests/baselines/reference/objectLitTargetTypeCallSite.errors.txt
tests/cases/compiler/objectLitTargetTypeCallSite.ts(5,9): error TS2345: Argument of type '{ a: 真假; b: 文字; }' is not assignable to parameter of type '{ a: 数字; b: 文字; }'.
  Types of property 'a' are incompatible.
    Type '真假' is not assignable to type '数字'.


==== tests/cases/compiler/objectLitTargetTypeCallSite.ts (1 errors) ====
    function process( x: {a:number; b:string;}) {
    	return x.a;
    }
    
    process({a:true,b:"y"});
            ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: 真假; b: 文字; }' is not assignable to parameter of type '{ a: 数字; b: 文字; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type '真假' is not assignable to type '数字'.